# celerity

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: BasicTimer.cpp  BasicTimer.h  BufferCompressor.cpp  BufferCrypter.cpp  BufferCrypter.h  ByteBuffer.cpp  ByteBuffer.h  ConfigManager.cpp  ConfigManager.h  Identifier.cpp  Identifier.h  KnownPack.cpp  KnownPack.h  MinecraftServer.cpp  MinecraftServer.h  NBT.cpp  NBT.h  RSAKeypair.cpp  RSAKeypair.h  Scheduler.cpp  Scheduler.h  ServerConfig.cpp  ServerConfig.h  VarInt.cpp  main.cpp
src/nbt/: Json2NBTReader.cpp  Json2NBTReader.h  NBTReader.cpp  NBTReader.h  NBTWriter.cpp  NBTWriter.h  TagCompoundBuilder.h  TagListBuilder.h  TagUtil.h
src/nbt/tag/: NamedTag.h  Tag.h  TagByteArray.h  TagCompound.h  TagDouble.h  TagIntArray.h  TagList.h  TagLongArray.h  TagShort.h  TagString.h  TagType.h
src/net/: Connection.cpp  Connection.h  ConnectionState.h  HttpClient.cpp  HttpClient.h  NetworkManager.cpp  NetworkManager.h  Packet.h  PacketRegistry.h
src/net/configuration/: ConfigurationPacketRegistry.cpp  ConfigurationPacketRegistry.h
src/net/configuration/clientbound/: ClearDialogPacket.cpp  ClearDialogPacket.h  CookieRequestPacket.cpp  CookieRequestPacket.h  CustomPayloadPacket.cpp  CustomPayloadPacket.h  CustomReportDetailsPacket.cpp  CustomReportDetailsPacket.h  DisconnectPacket.cpp  DisconnectPacket.h  FinishConfigurationPacket.cpp  FinishConfigurationPacket.h  KeepAlivePacket.cpp  KeepAlivePacket.h  PingPacket.cpp  PingPacket.h  RegistryDataPacket.cpp  RegistryDataPacket.h  ResetChatPacket.cpp  ResetChatPacket.h  ResourcePackPopPacket.cpp  ResourcePackPopPacket.h  ResourcePackPushPacket.cpp  ResourcePackPushPacket.h  SelectKnownPacksPacket.cpp  SelectKnownPacksPacket.h  ServerLinksPacket.cpp  ServerLinksPacket.h  ShowDialogPacket.cpp  ShowDialogPacket.h  StoreCookiePacket.cpp  StoreCookiePacket.h  TransferPacket.cpp  TransferPacket.h  UpdateEnabledFeaturesPacket.cpp  UpdateEnabledFeaturesPacket.h  UpdateTagsPacket.cpp  UpdateTagsPacket.h
src/net/configuration/in/: PacketConfigurationInClientInformation.cpp  PacketConfigurationInClientInformation.h  PacketConfigurationInKeepAlive.cpp  PacketConfigurationInKeepAlive.h  PacketConfigurationInKnownPacks.cpp  PacketConfigurationInKnownPacks.h  PacketConfigurationInPluginMessage.cpp  PacketConfigurationInPluginMessage.h
src/net/configuration/serverbound/: ClientInformationPacket.cpp  ClientInformationPacket.h  CookieResponsePacket.cpp  CookieResponsePacket.h  CustomClickActionPacket.cpp  CustomClickActionPacket.h  CustomPayloadPacket.cpp  CustomPayloadPacket.h  FinishConfigurationPacket.cpp  FinishConfigurationPacket.h  KeepAlivePacket.cpp  KeepAlivePacket.h  PongPacket.cpp  PongPacket.h  ResourcePackPacket.cpp  ResourcePackPacket.h  SelectKnownPacksPacket.cpp  SelectKnownPacksPacket.h
src/net/handshaking/: HandshakingPacketRegistry.cpp  HandshakingPacketRegistry.h  IntentionPacket.cpp  IntentionPacket.h
src/net/handshaking/serverbound/: IntentionPacket.cpp  IntentionPacket.h
src/net/login/: LoginPacketRegistry.cpp  LoginPacketRegistry.h
src/net/login/clientbound/: CookieRequestPacket.cpp  CookieRequestPacket.h  CustomQueryPacket.cpp  CustomQueryPacket.h  HelloPacket.cpp  HelloPacket.h  LoginCompressionPacket.cpp  LoginCompressionPacket.h  LoginDisconnectPacket.cpp  LoginDisconnectPacket.h  LoginFinishedPacket.cpp  LoginFinishedPacket.h
src/net/login/in/: PacketLoginInEncryptionResponse.cpp  PacketLoginInEncryptionResponse.h  PacketLoginInLoginAcknowledged.cpp  PacketLoginInLoginAcknowledged.h  PacketLoginInLoginPluginResponse.cpp  PacketLoginInLoginPluginResponse.h  PacketLoginInLoginStart.cpp  PacketLoginInLoginStart.h
src/net/login/serverbound/: CookieResponsePacket.cpp  CookieResponsePacket.h  CustomQueryAnswerPacket.cpp  CustomQueryAnswerPacket.h  HelloPacket.cpp  HelloPacket.h  KeyPacket.cpp  KeyPacket.h  LoginAcknowledgedPacket.cpp  LoginAcknowledgedPacket.h
src/net/play/: PlayPacketRegistry.cpp  PlayPacketRegistry.h
src/net/status/: PingRequestPacket.cpp  PingRequestPacket.h  PongResponsePacket.cpp  PongResponsePacket.h  StatusPacketRegistry.cpp  StatusPacketRegistry.h  StatusRequestPacket.cpp  StatusRequestPacket.h  StatusResponsePacket.cpp  StatusResponsePacket.h
src/net/status/clientbound/: PongResponsePacket.cpp  PongResponsePacket.h  StatusResponsePacket.cpp  StatusResponsePacket.h
src/net/status/serverbound/: PingRequestPacket.cpp  PingRequestPacket.h  StatusRequestPacket.cpp  StatusRequestPacket.h
src/player/: ClientInformation.cpp  ClientInformation.h  MojangProfile.cpp  MojangProfile.h  Player.cpp  Player.h
src/registry/: Registry.cpp  Registry.h  RegistryLoader.cpp  RegistryLoader.h
src/task/configuration/: ConfigurationTask.cpp  ConfigurationTask.h  KeepAliveKillerTask.cpp  KeepAliveKillerTask.h  KeepAliveTask.cpp  KeepAliveTask.h  RegistryDataTask.cpp  RegistryDataTask.h
src/util/: PairHash.h  RandUtil.cpp  RandUtil.h  UUIDUtil.cpp  UUIDUtil.h
